kubernetes/kontena-pharos/ingress/apple.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apple
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: apple
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
spec:
  selector:
    matchLabels:
      app: apple
  replicas: 2
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: hashicorp/http-echo
        args:
        - "-text=apple"
        ports:
        - containerPort: 5678
