kubernetes/kontena-pharos/ingress/banana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: banana
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: banana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana
spec:
  selector:
    matchLabels:
      app: banana
  replicas: 2
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana
        image: hashicorp/http-echo
        args:
        - "-text=banana"
        ports:
        - containerPort: 5678
