kubernetes/kontena-pharos/ingress/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ec2-52-203-197-40.compute-1.amazonaws.com
    secretName: secret-tls
  rules:
  - host: ec2-52-203-197-40.compute-1.amazonaws.com
    http:
      paths:
      - path: /apple
        backend:
          serviceName: apple
          servicePort: 80
      - path: /banana
        backend:
          serviceName: banana
          servicePort: 80
