kubernetes/kontena-pharos/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /apple
        backend:
          serviceName: apple
          servicePort: 80
      - path: /banana
        backend:
          serviceName: banana
          servicePort: 80
